soup, adaptivedemux2: soup loader is broken on macOS devenv and brew
WIN32: Looks like it might not be found in a dev build, possibly owing to the versioned DLL filename. Needs investigating/fixing.
MACOS: Unable to find the dylibs:
$ rm -f foo.bin && GST_REGISTRY=foo.bin GST_DEBUG=*soup*:6 gst-inspect-1.0 adaptivedemux2
0:00:00.442620000 98329 0x7f8edff0b380 DEBUG adaptivedemux2-soup gstsouploader.c:179:gst_soup_load_library: Trying all libsoups
0:00:00.443058000 98329 0x7f8edff0b380 DEBUG adaptivedemux2-soup gstsouploader.c:303:gst_soup_load_library: Module libsoup-3.0.0.dylib not found
0:00:00.443440000 98329 0x7f8edff0b380 DEBUG adaptivedemux2-soup gstsouploader.c:303:gst_soup_load_library: Module libsoup-2.4.1.dylib not found
0:00:00.444688000 98329 0x7f8edff0b380 DEBUG adaptivedemux2-soup gstsouploader.c:179:gst_soup_load_library: Trying all libsoups
0:00:00.445022000 98329 0x7f8edff0b380 DEBUG adaptivedemux2-soup gstsouploader.c:303:gst_soup_load_library: Module libsoup-3.0.0.dylib not found
0:00:00.445450000 98329 0x7f8edff0b380 DEBUG adaptivedemux2-soup gstsouploader.c:303:gst_soup_load_library: Module libsoup-2.4.1.dylib not found
0:00:00.446701000 98329 0x7f8edff0b380 DEBUG adaptivedemux2-soup gstsouploader.c:179:gst_soup_load_library: Trying all libsoups
0:00:00.447036000 98329 0x7f8edff0b380 DEBUG adaptivedemux2-soup gstsouploader.c:303:gst_soup_load_library: Module libsoup-3.0.0.dylib not found
0:00:00.447401000 98329 0x7f8edff0b380 DEBUG adaptivedemux2-soup gstsouploader.c:303:gst_soup_load_library: Module libsoup-2.4.1.dylib not found
0:00:00.475441000 98329 0x7f8edff0b380 DEBUG souputils gstsoupelement.c:38:soup_element_init: binding text domain gst-plugins-good-1.0 to locale dir /usr/local/share/locale
0:00:00.476567000 98329 0x7f8edff0b380 DEBUG soup gstsouploader.c:179:gst_soup_load_library: Trying all libsoups
0:00:00.476947000 98329 0x7f8edff0b380 DEBUG soup gstsouploader.c:303:gst_soup_load_library: Module libsoup-3.0.0.dylib not found
0:00:00.477404000 98329 0x7f8edff0b380 DEBUG soup gstsouploader.c:303:gst_soup_load_library: Module libsoup-2.4.1.dylib not found
0:00:00.477417000 98329 0x7f8edff0b380 WARN souputils gstsoupelement.c:61:soup_element_init: Failed to load libsoup library
0:00:00.478545000 98329 0x7f8edff0b380 DEBUG soup gstsouploader.c:179:gst_soup_load_library: Trying all libsoups
0:00:00.478917000 98329 0x7f8edff0b380 DEBUG soup gstsouploader.c:303:gst_soup_load_library: Module libsoup-3.0.0.dylib not found
0:00:00.479374000 98329 0x7f8edff0b380 DEBUG soup gstsouploader.c:303:gst_soup_load_library: Module libsoup-2.4.1.dylib not found
0:00:00.479386000 98329 0x7f8edff0b380 WARN souputils gstsoupelement.c:61:soup_element_init: Failed to load libsoup library
Plugin Details:
Name adaptivedemux2
Description Adaptive Streaming 2 plugin
Filename /path/to/builddir/subprojects/gst-plugins-good/ext/adaptivedemux2/libgstadaptivedemux2.dylib
Version 1.21.1.1
License LGPL
Source module gst-plugins-good
Documentation https://gstreamer.freedesktop.org/documentation/adaptivedemux2/
Binary package GStreamer Good Plug-ins git
Origin URL Unknown package origin
0 features: