subprojects/gst-plugins-good/ext/soup/gstsouputils.h
@@ -21,7 +21,7 @@
 #include <glib.h>
 #include <gst/gst.h>
 
-#ifdef STATIC_SOUP
+#ifdef LINK_SOUP
 #include <libsoup/soup.h>
 #else
 #include "stub/soup.h"
